[package]
name = "encrawl-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive", "string"] }
colog = "1.3.0"
log = "0.4.21"
regex = { version = "1.10.4", features = ["use_std"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
ron = "0.8.1"
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
